--- a/index.html
+++ b/index.html
@@ -34,7 +34,47 @@
         <span class="bold">『コーディングもできるwebデザイナー』</span>です！<span class="syou"><br>
     あと、就職…（小声）</span></p></div>
     </div>
-<div class="box6">box6</div>
+<div class="box6">
+    <h2>勉強していること</h2></div>
+
+<div class="box7 cf">
+    <div class="box7-1">
+        <h3>HTML5</h3>
+        <i class="fab fa-html5"></i>
+        <p>学習期間<br>
+        2019年10月21日～現在</p>
+    </div>
+     <div class="box7-2">
+         <h3>CSS3</h3>
+        <i class="fab fa-css3-alt"></i>
+        <p>学習期間<br>
+        2019年10月21日～現在</p>
+    </div>
+     <div class="box7-3">
+         <h3>Java Script</h3>
+        <i class="fab fa-js-square"></i>
+        <p>学習期間<br>
+        2019年10月21日～現在</p>
+    </div>
+     <div class="box7-4">
+         <h3>jQuery</h3>
+        <i class="fab fa-js-square"></i>
+        <p>学習期間<br>
+        2019年10月21日～現在</p>
+    </div>
+     <div class="box7-5">
+         <h3>Photoshop</h3>
+        <i class="fab fa-adobe"></i>
+        <p>学習期間<br>
+        2019年10月21日～現在</p>
+    </div>
+     <div class="box7-6">
+        <h3>illustrator</h3>
+       <i class="fab fa-adobe"></i>
+        <p>学習期間<br>
+        2019年10月21日～現在</p>
+    </div>
+    </div>
     
 </body>
 </html>
